fixed sizing, spacing

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -38,7 +38,8 @@ nav {
 a {
     text-decoration: none;
     color:white;
-    padding: 20px 20px
+    padding: 20px 20px;
+
 }
 
 a:link:hover {
@@ -64,16 +65,16 @@ h2 {
 p {
     color: white;
     font-family: 'Raleway', sans-serif;
-    size: 12px;
-    padding-left: 50px;
+    font-size: 18px;
+    padding-left: 120px;
     float: left;
-    width: 50%;
+    width: 40%;
 }
 
 .MePhoto {
-    width: 30%;
+    height: 500px;
     float:right;
-    padding: 50px 100px 50px 50px;
+    padding-right: 100px;
 }
 
 .spacer {
@@ -81,7 +82,7 @@ p {
 }
   
 .spacer2 {
-    height: 200px;
+    height: 400px;
 }
 
 .work {
@@ -96,4 +97,5 @@ p {
     display: inline-block;
     padding-left: 100px;
 }
+
 
